# llama3-burn

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
python/: main.py  test.py
src/: config.rs  loader.rs  main.rs  model.rs  model_store.rs
src/operators/: apply.rs  mod.rs  outer.rs  rsqrt.rs
