[package]
name = "burn-research"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.15.0", git = "https://github.com/tracel-ai/burn.git", branch = "main", features = [
    "wgpu",
    "ndarray",
    "candle",
    "candle-cuda",
] }
safetensors = "0.4.3"
