[package]
name = "llama3-burn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.15.0", git = "https://github.com/tracel-ai/burn.git", branch = "main", features = [
    "wgpu",
    "ndarray",
    "candle",
    "metal",
] }
num-traits = "0.2.19"
safetensors = "0.4.3"
tokenizers = { version = "0.19.1", features = ["hf-hub", "http"] }

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]
ndarray = ["burn/ndarray"]
candle = ["burn/candle"]
metal = ["burn/metal"]